<resources>
    <string name="app_name">Run it</string>
    <string name="parametre_txt">Paramètres</string>
    <string name="trajet_txt">Trajets</string>
    <string name="recompense_txt">Récompenses</string>
    <string name="partage_txt">Partager</string>
    <string name="go_button">GO</string>

    <!-- Classment -->
    <string name="daily_text">Quotidien</string>
    <string name="monthly_text">Mensuel</string>
    <string name="annuel_text">Annuel</string>
    <string name="individual_text">Individuel</string>
    <string name="team_text">Équipe</string>
    <string name="rang_text">Rang</string>
    <string name="runner_text">Coureur</string>
    <string name="equipe_text">Équipe</string>
    <string name="score_text">Score</string>
    <string name="rank">Rank</string>
    <string name="runner">Runner</string>
    <string name="score">Score</string>
    <string name="team">Team</string>



</resources>