<?xml version="1.0" encoding="utf-8"?><!--
        Fichier XML créé par : [Tianchen Han]
        Groupe : [TP5B1 Interaction]
        Intégrateur : [Nom de l'intégrateur]
        Date de création : [2023-11-21]
        Description : [Menu de partie classement]
        Version : [v.3.1]
        Dernière modification : [2024-01-04]
    -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLine_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="45sp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLine_bot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="120sp" />


    <!-- Classement -->

    <LinearLayout
        android:id="@+id/selectionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/ScrollView_Classement"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideLine_top">

        <TextView
            android:id="@+id/textView_quotidien"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/tab_selector"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/daily_text" />

        <TextView
            android:id="@+id/textView_mensuel"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/tab_selector"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/monthly_text" />

        <TextView
            android:id="@+id/textView_annuel"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/tab_selector"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/annuel_text" />

        <View
            android:layout_width="1dp"
            android:layout_height="48dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/textView_individuel"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/tab_selector"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/individual_text" />

        <TextView
            android:id="@+id/textView_equipe"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/tab_selector"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/team_text" />
    </LinearLayout>

    <HorizontalScrollView
        android:id="@+id/ScrollView_Classement"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#EEEEEE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectionBar">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:background="@drawable/tab_selector"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/rank" />

            <TextView
                android:layout_width="170dp"
                android:layout_height="match_parent"
                android:background="@drawable/tab_selector"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/runner" />

            <TextView
                android:layout_width="140dp"
                android:layout_height="match_parent"

                android:background="@drawable/tab_selector"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/team" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/tab_selector"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/score" />
        </LinearLayout>
    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_classement"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@id/guideLine_bot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ScrollView_Classement"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>